Post, Put examples and Postman collection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.port=8080
 spring.application.name=MockServer Testing
 logging.level.root=info
 management.endpoints.web.exposure.include=*
-application.indices.url=http://localhost:1080/stocks/indices
+
+assets.url=http://localhost:1080/
 
 
